Added crud operations for a comedian
